_sass/_custom.scss
/**
 * Overrides
 */
html, body {
     height: 100%;
     text-align: center;
}
body {
     display: flex;
     flex-direction: column;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     letter-spacing: 0.02em;
}
a {
     cursor: pointer;
}
nav {
     display: flex;
     justify-content: center;
}
header > nav {
     margin-bottom: 1em;
     font-size: 20px;

     @include media-query($on-palm){
        font-size: $small-font-size;
      }
}
.page-link {
     margin-left: .5em;

     @include media-query($on-palm){
        margin-left: .4em;
      }
}
.page-content {
    flex: 1 0 auto;
    margin: 0 auto;
    max-width: 70%;

    @include media-query($on-palm){
        max-width: 90%;
    }
}
.site-header {
    border-bottom: 1px solid #EDEDED;
    margin-bottom: 1em;
}
footer {
    font-size: $small-font-size;
    background: $light-grey-color;
    color: #A2A2A2;
    padding: 20px 20px;
}

/**
 * Home
 */
.site-header-title {
    font-size: $site-header-font-size;
    font-weight: 200;

    > a {
        color: black;
    }

    @include media-query($on-palm){
       font-size: $site-header-mobile-font-size;
     }
}

/**
 * Forms generic
 */
input, select, textarea {
    width: 100%;
    font-family: inherit;
    font-size: 100%;
    padding: 12px;
    border-radius: .25em;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
    border-color: $input-border-color;
    border-style: solid;
    border-width: 1px 1px 4px;
    box-shadow: inset 0 1px 3px rgba(0,0,0,.06);
    -webkit-appearance: none;
}
input:focus, select:focus, textarea:focus {
    border-color: $input-border-color-focus;
    outline: none;
    box-shadow: inset 0 1px 3px rgba(0,0,0,.06), 0 0 5px rgba(51,56,63,.7);
}
input[type=submit] {
    background-color: $brand-color;
    width: 30%;
    color: $white-color;
    padding: 12px 0px;
    border: none;
    cursor: pointer;
    display: block;
    margin: 0 auto;

    @include media-query($on-palm){
       width: 60%;
     }
}
input[type=submit]:hover {
    background-color: $brand-secondary-color;
}

/**
 * Comments
 */
 #respond {
     @include media-query($on-palm){
        font-size: $mobile-font-size;
      }
 }
 .comment {
    background: rgba(0,0,0,0.01);
    border-left: 1px solid rgba(0,0,0,0.2);
    padding: 3% 2%;
 }
 .comment-reply {
     margin-left: 5%;
 }
.comment-author-name {
    margin: 0 0 .25em;
    font-size: 1.25em;
    line-height: 1;
    display: inline-block;
}
.comment-author-name > a {
    color: $text-color;
}
.comment-timestamp {
    font-size: .8em;
}
.comment-content {
    margin-top: 1em;
}
.comment-reply-link {
    text-align: right;
}
.permalink {
    font-size: 1.1em;
    font-weight: bold;
}
/* Site author specific */
.admin {
  .comment-author-name {
    box-shadow: inset 0 -0.25em 0 rgba($warning-color, 0.5);
  }
}
.cancel-reply {
    text-decoration: underline;
    margin-left: 5%;
}

/**
 * Signup form
 */
#signup {
    width: 95%;
    border: 1px solid #d7d8da;
    border-radius: 2px;
    padding: 20px;
    margin: 25px auto;

    @include media-query($on-palm){
       padding: 20px 10px;
       font-size: $mobile-font-size;
     }
}
#signup-title {
    font-size: 1.5em;

    @include media-query($on-palm){
       font-size: .96em;
     }
}
#signup-description {
    @include media-query($on-palm){
       display: none;
     }
}
#signup-email {
    width: 68%;
    display: inline-block;
}
#signup-submit {
    width: 30%;
    display: inline-block;

    @include media-query($on-palm){
        padding-left: 10px;
        padding-right: 10px;
     }
}

/**
 * Share buttons
 */
.share-buttons {
    display: flex;
    justify-content: center;
    margin: 10px auto;

    i {
        width: 32px;
        height: 32px;
    }
}
.share-buttons li {
    display: inline;
    margin-left: 10px;
}

/**
 * Tags
 */
 .tag-link {
     font-size: 15px;
     color: $grey-color;

     &:hover {
         color: $text-color;
         text-decoration: underline;
     }

     &:hover .tag-icon {
         fill: $text-color;
     }
 }
.tag-icon {
    vertical-align: sub;
    margin-right: 5px;
    fill: rgba(0,0,0,.3);
}

 /**
  * Sprites
  */
 .sprite {
     display: inline-block;
     background: url('/images/spritesheet.png') no-repeat;
     overflow: hidden;
     text-indent: -9999px;
     text-align: left;
 }

.sprite-author {
    background-position: -1px -0px;
    width: 119px;
    height: 160px;

    @include media-query($on-palm){
        display: block;
        margin: 0 auto;
    }
}
.sprite-email {
    background-position: -1px -161px;
}
.sprite-facebook {
    background-position: -34px -161px;
}
.sprite-google {
    background-position: -67px -161px;
}
.sprite-linkedin {
    background-position: -1px -194px;
}
.sprite-pocket {
    background-position: -34px -194px;
}
.sprite-reddit {
    background-position: -67px -194px;
}
.sprite-twitter {
    background-position: -1px -227px;
}

 /**
  * Author bio
  */
  .author {
      border-bottom: 5px solid $text-color;
      box-shadow: 0 0 5px #a8a9ab;
      padding: .5em 1em;
  }
  .author-image {
      border-radius: 10%;
  }
.author-image-section {
    display: inline-block;
    vertical-align: top;

    @include media-query($on-palm){
        width: 100%;
     }
}
.author-about {
    width: 70%;
    margin-left: 1em;
    display: inline-block;

    p, h4 {
        margin: 0;
        padding:0;
    }

    @include media-query($on-palm){
        width: 100%;
        margin-left: 0em;
        display: block;
     }
}

/**
 * Page content
 */
.post-list {
    list-style: none;
}
.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}
.post-link {
    font-size: $post-link-font-size;
}

/**
 * Posts
 */
.post-title {
    font-size: $post-title-font-size;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}
.post-content {
    width: 70%;
    text-align: left;
    margin: 0 auto;
    margin-bottom: $spacing-unit;

    h1 {
        font-size: 42px;

        @include media-query($on-laptop) {
            font-size: 36px;
        }
    }

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;
        margin-top: 40px;

        &:first-of-type {
            margin-top: 0px;
        }

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

